--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    x_vweb_symfony_bridge.example:
-#        class: XVweb\Bundle\SymfonyBridgeBundle\Example
+#        class: XVEngine\Bundle\SymfonyBridgeBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
